Auto layout for question options

--- a/AbilityTest/Storyboards/AbilityTest/Storyboards/Base.lproj/Records.storyboard
+++ b/AbilityTest/Storyboards/AbilityTest/Storyboards/Base.lproj/Records.storyboard
@@ -51,8 +51,8 @@
                                             <segue destination="hZH-hd-XrY" kind="presentation" identifier="pdfPreviewView" id="Ehq-Vy-Fuy"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="FirstName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nfo-jt-Ccg">
-                                        <rect key="frame" x="255" y="53" width="208" height="36"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FirstName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nfo-jt-Ccg">
+                                        <rect key="frame" x="290.5" y="53.5" width="137" height="36"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
                                         <nil key="highlightedColor"/>
                                     </label>
