--- a/AbilityTest/Storyboards/AbilityTest/Storyboards/Base.lproj/Records.storyboard
+++ b/AbilityTest/Storyboards/AbilityTest/Storyboards/Base.lproj/Records.storyboard
@@ -121,10 +121,15 @@
                                     <constraint firstAttribute="width" secondItem="18F-kT-ssz" secondAttribute="height" multiplier="251:208" id="yd0-3W-b3J"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WGH-sl-VpK" customClass="BarChartView" customModule="Charts">
+                                <rect key="frame" x="25" y="608" width="718" height="358.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="18F-kT-ssz" firstAttribute="centerX" secondItem="41r-9s-2Ef" secondAttribute="centerX" id="6Ji-zO-3X8"/>
+                            <constraint firstItem="WGH-sl-VpK" firstAttribute="trailing" secondItem="41r-9s-2Ef" secondAttribute="trailing" id="7dD-Ob-5p6"/>
                             <constraint firstItem="18F-kT-ssz" firstAttribute="width" secondItem="41r-9s-2Ef" secondAttribute="width" multiplier="0.26" id="8Lc-xC-pFw"/>
                             <constraint firstItem="18F-kT-ssz" firstAttribute="top" secondItem="kPM-Lj-LwR" secondAttribute="top" constant="20" id="9Bf-y6-W6e"/>
                             <constraint firstItem="gV1-Z2-y1Z" firstAttribute="top" secondItem="18F-kT-ssz" secondAttribute="bottom" constant="10" id="9Ix-qb-k83"/>
@@ -132,8 +137,11 @@
                             <constraint firstItem="41r-9s-2Ef" firstAttribute="height" secondItem="3cq-OC-eBe" secondAttribute="height" multiplier="0.35" id="Kw4-Y4-3E0"/>
                             <constraint firstItem="gV1-Z2-y1Z" firstAttribute="leading" secondItem="18F-kT-ssz" secondAttribute="leading" constant="-10" id="WG1-Nk-zD1"/>
                             <constraint firstItem="41r-9s-2Ef" firstAttribute="leading" secondItem="kPM-Lj-LwR" secondAttribute="leading" constant="25" id="aUk-JI-wZN"/>
+                            <constraint firstItem="WGH-sl-VpK" firstAttribute="top" secondItem="41r-9s-2Ef" secondAttribute="bottom" constant="35" id="bij-yL-uqm"/>
                             <constraint firstItem="41r-9s-2Ef" firstAttribute="top" secondItem="18F-kT-ssz" secondAttribute="bottom" constant="-30" id="cfF-TO-StY"/>
+                            <constraint firstItem="WGH-sl-VpK" firstAttribute="leading" secondItem="41r-9s-2Ef" secondAttribute="leading" id="dse-hI-r2A"/>
                             <constraint firstItem="kPM-Lj-LwR" firstAttribute="trailing" secondItem="41r-9s-2Ef" secondAttribute="trailing" constant="25" id="eRy-ze-I7U"/>
+                            <constraint firstItem="WGH-sl-VpK" firstAttribute="height" secondItem="3cq-OC-eBe" secondAttribute="height" multiplier="0.35" id="sWb-Tt-lIu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kPM-Lj-LwR"/>
                     </view>
@@ -147,6 +155,7 @@
                     <connections>
                         <outlet property="avatarImageView" destination="18F-kT-ssz" id="alf-Wg-14K"/>
                         <outlet property="avatarOffsetConstraint" destination="cfF-TO-StY" id="4dZ-KY-HY7"/>
+                        <outlet property="barChartView" destination="WGH-sl-VpK" id="19d-Nr-zoU"/>
                         <outlet property="examinerLabel" destination="ZKs-69-ISr" id="5qQ-cA-eNd"/>
                         <outlet property="exportButton" destination="gV1-Z2-y1Z" id="IjH-KU-JW4"/>
                         <outlet property="idLabel" destination="C6a-vS-0Qc" id="mhd-Cv-99y"/>
